# procedural_animations

./: Cargo.toml  README.md
assets/shaders/: custom_material_import.wgsl  simple_drop_shadow.wgsl  simple_shadow.wgsl
src/: builders.rs  cursor.rs  easing_functions.rs  main.rs  render_shadows.rs  top_down_crawler.rs
