[package]
name = "proc_animation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.22.1"
# bevy_mod_outline = "0.6.0"
# bevy_simple_2d_outline = "0.1.1"
# bevy_outline = "0.1.0"
rand = "0.8.5"
